--- a/assets/locale/ru.json
+++ b/assets/locale/ru.json
@@ -50,7 +50,7 @@
   "haspromo": "Есть промокод?",
   "promocode": "Промокод",
 
-
+  "check": "Активировать",
   "cooperation": "Сотрудничество",
   "logout": "Выйти из профиля",
   "main": "Главная",
