--- a/assets/locale/uz.json
+++ b/assets/locale/uz.json
@@ -46,7 +46,7 @@
   "spravka": "Ma'lumotnoma",
   "haspromo": "Promokod bormi?",
   "promocode": "Promokod",
-
+  "check": "Faollashtirish",
 
 
   "low_price": "Arzon narxlar",
